--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
 
+    //  Lottie Animation
+    implementation 'com.airbnb.android:lottie:3.4.0'
+
+
+
 }
